<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="JobCompare App"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:padding="8dp"
        android:background="#8890BC"/>

    <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Job Offer"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"/> -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        tools:ignore="ExtraText">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add Job Offer"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/addOfferButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Add Job Offer"
            android:src="@android:drawable/ic_menu_add"
            android:backgroundTint="#8890BC" />
    </LinearLayout>

    <!-- Job Fields -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Title:"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/jobTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000" />
            </LinearLayout>

            <!-- Company -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Company:"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/companyName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000" />
            </LinearLayout>

            <!-- Location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="City:"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="State:"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <!-- Cost of Living Index -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cost of Living Index:"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/costOfLivingIndex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!-- Yearly Salary -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Yearly Salary ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/yearlySalary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!-- Yearly Bonus -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Yearly Bonus ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/yearlyBonus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!-- Tuition Reimbursement -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Tuition Reimbursement ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/tuitionReimbursement"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!-- Health Insurance -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Health Insurance ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/healthInsurance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!--Employee Discount -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Employee Discount ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/employeeDiscount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <!--Child Adoption Assistance -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Child Adoption Assistance ($):"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/childAdoptionAssistance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:inputType="numberDecimal" />
            </LinearLayout>

        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="16dp">
            <Button
                android:id="@+id/saveOfferButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:backgroundTint="#9fa8da"
                android:textColor="#000000" />

            <Button
                android:id="@+id/cancelOfferButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Cancel"
                android:backgroundTint="#CCCCCC"
                android:textColor="#000000" />

            <Button
                android:id="@+id/compareOfferButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Compare"
                android:backgroundTint="#9fa8da"
                android:textColor="#000000" />
        </LinearLayout>

    <!-- </LinearLayout> -->

</LinearLayout>